# ndkStudy

./: readme.md  笔记.md
day01/code/: Demo1.cpp
day01/notes/: 笔记.md
day02/code/: Demo1.7z  Demo1.cpp
day02/notes/: 笔记.md
day03/code/: Demo1.7z  Demo1.cpp
day03/notes/: 笔记.md
day04/code/: Demo1.cpp
day04/notes/: 笔记.md
day05/code/: Demo1.7z
day05/notes/: 笔记.md  补充资料.docx
day06/code/: JniDemo1.7z
day06/notes/: 笔记.md
day07/code/c/: Demo1.7z
day07/notes/: 笔记.md
day08/code/c/: Demo1.7z
day08/notes/: 笔记.md
day09/code/: Demo1.7z
day09/notes/: 笔记.md  课堂笔记.txt
day10/code/: Demo1_ThirdLibrary.7z  Demo2.7z  Demo3_FileDiffPatch.7z  Demo4_Thread.7z
day10/notes/: 笔记.md
day11/notes/: 笔记.md
day12/code/: Demo2.7z
day12/code/Demo1_BsPatch/app/: CMakeLists.txt  build.gradle
day12/code/Demo1_BsPatch/app/src/androidTest/java/com/cjw/demo1_bspatch/: ExampleInstrumentedTest.java
day12/code/Demo1_BsPatch/app/src/main/: AndroidManifest.xml
day12/code/Demo1_BsPatch/app/src/main/cpp/: bspatch.c  com_cjw_demo1_bspatch_BsPatch.h
day12/code/Demo1_BsPatch/app/src/main/java/com/cjw/demo1_bspatch/: BsPatch.java  MainActivity.java
day12/code/Demo1_BsPatch/app/src/main/res/layout/: activity_main.xml
day12/code/Demo1_BsPatch/app/src/main/res/values/: strings.xml
day12/code/Demo1_BsPatch/app/src/test/java/com/cjw/demo1_bspatch/: ExampleUnitTest.java
day12/code/Demo1_BsPatch/gradle/wrapper/: gradle-wrapper.properties
day12/notes/: 笔记.md
day13/notes/: 笔记.md
